objects/tmpAgency__c.object
<CustomObject>
    <fields>
        <fullName>COMMENT__c</fullName>
        <label>COMMENT</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enterdate__c</fullName>
        <label>Enterdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expdate__c</fullName>
        <label>Expdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromDate__c</fullName>
        <label>FromDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <label>Legal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_City__c</fullName>
        <label>Pri_City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_County__c</fullName>
        <label>Pri_County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_DBA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pri_DBA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pri_Email__c</fullName>
        <label>Pri_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pri_Fax__c</fullName>
        <label>Pri_Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_FictExpDate__c</fullName>
        <label>Pri_FictExpDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pri_Licname__c</fullName>
        <label>Pri_Licname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_Licperiod__c</fullName>
        <label>Pri_Licperiod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_Mailcity__c</fullName>
        <label>Pri_Mailcity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_Mailstate__c</fullName>
        <label>Pri_Mailstate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_Mailstreet__c</fullName>
        <label>Pri_Mailstreet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_Mailzip__c</fullName>
        <label>Pri_Mailzip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_Phone__c</fullName>
        <label>Pri_Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_Pic__c</fullName>
        <label>Pri_Pic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_RegistrationName__c</fullName>
        <label>Pri_RegistrationName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_Regno__c</fullName>
        <label>Pri_Regno</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_Status__c</fullName>
        <label>Pri_Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_Street__c</fullName>
        <label>Pri_Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_Zip__c</fullName>
        <label>Pri_Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_adddate__c</fullName>
        <label>Pri_adddate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pri_attn__c</fullName>
        <label>Pri_attn</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pri_canceldate__c</fullName>
        <label>Pri_canceldate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pri_state__c</fullName>
        <label>Pri_state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToDate__c</fullName>
        <label>ToDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pri_Legalentity__c</fullName>
        <label>pri_Legalentity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>tmpAgency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Pri_Regno__c</columns>
        <columns>Pri_Status__c</columns>
        <columns>Pri_Licperiod__c</columns>
        <columns>FromDate__c</columns>
        <columns>ToDate__c</columns>
        <columns>pri_Legalentity__c</columns>
        <columns>Legal__c</columns>
        <columns>Pri_RegistrationName__c</columns>
        <columns>Pri_DBA__c</columns>
        <columns>Pri_FictExpDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>tmpAgency</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>